--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "byline": "^4.1.1",
     "minimist": "^0.2.0",
     "moment": "^2.7.0",
+    "moment-timezone": "^0.2.0",
     "q": "^1.0.1"
   }
 }
